# mocam

./: .gitignore  CMakeLists.txt  README.md
cmake/: compilation.cmake  deps.cmake  mac.cmake  platform.cmake  target.cmake
src/: Application.cpp  Application.h  CMakeLists.txt  CaptureSession.cpp  CaptureSession.h  Face.cpp  Face.h  FaceDetector.cpp  FaceDetector.h  Types.cpp  Types.h  Util.cpp  Util.h  VideoDevice.cpp  VideoDevice.h  Window.cpp  Window.h  faces.cpp  mocam.cpp  snapshot.cpp
src/devices/: CMakeLists.txt
src/devices/mac/: CMakeLists.txt  Snapper.h  Snapper.m  main.cpp  video.h  video.m
src/devices/osx/: CMakeLists.txt
src/devices/osx/isight/: CMakeLists.txt  isight.h  isight.m  main.cpp
src/mac/: ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  CaptureSessionImpl.cpp  CaptureSessionImpl.h  FrameGrabber.cpp  FrameGrabber.h  Mac.h  Mac.m  MacUtil.m  Snapper.h  Snapper.m  Util.h  Util.m  VideoDeviceImpl.cpp  VideoDeviceImpl.h  video.h  video.m
